--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 					
 					<!-- Terrain --> 
 					<div class="type_settings" id="Terrain"> <!-- display:block -> Show default texture -->
-						<div class="option_settings_head">
+						<div class="option_settings_head" style="height:40px;">
 							Terrain Settings
 						</div>
 						<table align="center">
@@ -479,13 +479,13 @@
 						</tr>
 						
 						</table>
-						<div style="min-height:10px"></div>
+						<div style="min-height:15px"></div>
 						<div>
 							Shadow
 							<input type="checkbox" onchange="switchTerrainShadow();updateTexture();" checked> 
 							<!--<input type="button" value="update" onclick="updateTexture('shadow');"> -->
 						</div>
-						<div style="min-height:15"></div>
+						<div style="min-height:10"></div>
 
 						<table>
 						<tr class="suboption_settings">
