--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<meta name="description" content="Online Texture Generator FREE! Create a Texture directly inside your browser! No Uploads required, completely client-based">
 	<meta name="author" content="Christian Petry">
 	<meta name="language" CONTENT="english">
-	<meta name="keywords" content="Texture,Generator,Online,Brick,Checker,Perlin Noise,Gradient,Tiles,cpetry,github,Texture-Generator,Javascript">
+	<meta name="keywords" content="Texture,Generator,TextureGenerator,Online,Brick,Checker,Perlin Noise,Noise,Terrain,Shadowmap,Gradient,Tiles,cpetry,github,Texture-Generator,Javascript">
 	<meta name="date" content="2014-09-26">
 	<meta name="page-topic" content="Dienstleistung">
 	<meta name="robots" content="index,follow">
