added faster shadow algorithm

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 						<tr class="suboption_settings">
 							<td style="min-width:150px;">Strength
 								<input type="range" id="terrain_shadow_strength_slider" min="1" max="100" value="40" step="1"
-									onchange="updateTexture('shadow_strength');"
+									onchange="updateTexture('shadow');"
 									style="width:45%;vertical-align:top;">
 							</td>
 							<td style="min-width:150px;">Sun Height
