added some wood teststuff zeugs

--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@
 							<td align="center">
 								<div style="display:inline-block;" class="colorpicker" id="wood_color1"></div>
 								<div style="display:inline-block;" class="colorpicker" id="wood_color2"></div>
+								<div style="display:inline-block;" class="colorpicker" id="wood_color3"></div>
 							</td>
 						</tr>
 						
