fixed image size

--- a/index.html
+++ b/index.html
@@ -967,11 +967,11 @@
 	</div>
 
 
-	<div style="position: absolute; margin-top: -150px; margin-left: 30px; z-index:5; color: #111;
+	<div style="position: absolute; margin-top: -150px; margin-left: 30px; z-index:-1; color: #111;
 	border-radius: 5px; padding: 5px 5px 5px 5px; background: none repeat scroll 0% 0% rgba(240,240,240,0.4);">
 		Need a NormalMap?<br/>
 		<a href="http://cpetry.github.io/NormalMap-Online/">
-			<img src="https://cpetry.github.io/NormalMap-Online/images/nmap_logo_trans_small.png" style="padding-top:5px"/>
+			<img src="https://cpetry.github.io/NormalMap-Online/images/nmap_logo_trans_small.png" style="padding-top:5px; height: 80px; "/>
 		</a>
 	</div>
 	
