--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<script src="colpick-2.0.2/js/colpick.js" type="text/javascript"> </script>
 	<link rel="stylesheet" href="colpick-2.0.2/css/colpick.css" type="text/css"/>
 
-	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:700"></link>
+	<link type="text/css" rel="stylesheet" href=".opensans700.css">
 
 	
 
